--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Personal Website</title>
-</head>
-<body>
-<p1>Hi This is Anish!!!</p1>
-</body>
-</html>
+{% extends "layout.html" %}
+    {% block content %}
+        <div class="content-section">
+            <form method="post" action="">
+                {{ form.hidden_tag() }}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Stock Confirmation</legend>
+                    <div class="form-group">
+                        {{ form.material.label(class="form-control-label") }}
+
+                        {% if form.material.errors %}
+                            {{ form.material(class="form-control form-control-sm is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.material.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.material(class="form-control form-control-sm") }}
+                        {% endif %}
+
+                    </div>
+                    <div class="form-group">
+                        {{ form.quantity.label(class="form-control-label") }}
+                        {% if form.quantity.errors %}
+                            {{ form.quantity(class="form-control form-control-sm is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.quantity.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.quantity(class="form-control form-control-sm") }}
+                        {% endif %}
+                    </div>
+                </fieldset>
+                <div class="form-group">
+                    {{ form.confirm(class="btn btn-outline-info") }}
+                </div>
+            </form>
+        </div>
+    {% endblock content %}
